@@ -11,6 +11,7 @@ FUNCTOR(ATOM_assert, 1),
 FUNCTOR(ATOM_asserta, 1),
 FUNCTOR(ATOM_atan, 1),
 FUNCTOR(ATOM_atan, 2),
+FUNCTOR(ATOM_att, 3),
 FUNCTOR(ATOM_backslash, 1),
 FUNCTOR(ATOM_bar, 2),
 FUNCTOR(ATOM_block, 3),
@@ -48,8 +49,10 @@ FUNCTOR(ATOM_dmutex, 1),
 FUNCTOR(ATOM_domain_error, 2),
 FUNCTOR(ATOM_dot, 2),
 FUNCTOR(ATOM_doublestar, 2),
+FUNCTOR(ATOM_dprof_node, 1),
 FUNCTOR(ATOM_dstream, 1),
 FUNCTOR(ATOM_dthrow, 1),
+FUNCTOR(ATOM_dwakeup, 1),
 FUNCTOR(ATOM_e, 0),
 FUNCTOR(ATOM_end_of_stream, 1),
 FUNCTOR(ATOM_eof_action, 1),
@@ -64,7 +67,8 @@ FUNCTOR(ATOM_exited, 1),
 FUNCTOR(ATOM_exp, 1),
 FUNCTOR(ATOM_fail, 0),
 FUNCTOR(ATOM_failure_error, 1),
-FUNCTOR(ATOM_file, 3),
+FUNCTOR(ATOM_file, 1),
+FUNCTOR(ATOM_file, 4),
 FUNCTOR(ATOM_file_name, 1),
 FUNCTOR(ATOM_file_no, 1),
 FUNCTOR(ATOM_float, 1),
@@ -83,6 +87,7 @@ FUNCTOR(ATOM_io_error, 2),
 FUNCTOR(ATOM_is, 2),
 FUNCTOR(ATOM_larger, 2),
 FUNCTOR(ATOM_larger_equal, 2),
+FUNCTOR(ATOM_line_count, 1),
 FUNCTOR(ATOM_list_position, 4),
 FUNCTOR(ATOM_listing, 1),
 FUNCTOR(ATOM_log, 1),
@@ -95,6 +100,7 @@ FUNCTOR(ATOM_minus, 1),
 FUNCTOR(ATOM_minus, 2),
 FUNCTOR(ATOM_mod, 2),
 FUNCTOR(ATOM_mode, 1),
+FUNCTOR(ATOM_msb, 1),
 FUNCTOR(ATOM_not_implemented, 2),
 FUNCTOR(ATOM_not_provable, 1),
 FUNCTOR(ATOM_obtain, 2),
@@ -134,7 +140,7 @@ FUNCTOR(ATOM_softcut, 2),
 FUNCTOR(ATOM_spy, 1),
 FUNCTOR(ATOM_sqrt, 1),
 FUNCTOR(ATOM_star, 2),
-FUNCTOR(ATOM_stream, 3),
+FUNCTOR(ATOM_stream, 4),
 FUNCTOR(ATOM_stream_position, 3),
 FUNCTOR(ATOM_string, 2),
 FUNCTOR(ATOM_string_position, 2),
@@ -154,13 +160,7 @@ FUNCTOR(ATOM_type, 1),
 FUNCTOR(ATOM_type_error, 2),
 FUNCTOR(ATOM_undefinterc, 4),
 FUNCTOR(ATOM_var, 1),
+FUNCTOR(ATOM_wakeup, 3),
 FUNCTOR(ATOM_warning, 3),
 FUNCTOR(ATOM_xor, 2),
 FUNCTOR(ATOM_xpceref, 1),
-FUNCTOR(ATOM_dprof_node, 1),
-FUNCTOR(ATOM_file, 1),
-FUNCTOR(ATOM_line_count, 1),
-FUNCTOR(ATOM_wakeup, 3),
-FUNCTOR(ATOM_dwakeup, 1),
-FUNCTOR(ATOM_att, 3),
-FUNCTOR(ATOM_msb, 1),
