@@ -59,6 +59,7 @@ typedef struct
 typedef struct
 { atom_t	file;			/* current source file */
   int	  	line;			/* current line */
+  int		linepos;		/* position in the line */
   long		character;		/* current character location */
 } source_location;
 
@@ -519,6 +520,7 @@ GLOBAL PL_local_data_t *PL_current_engine_ptr;
 #define fli_context	  	(LD->foreign_environment)
 #define source_file_name	(LD->read_source.file)
 #define source_line_no		(LD->read_source.line)
+#define source_line_pos		(LD->read_source.linepos)
 #define source_char_no		(LD->read_source.character)
 #define exception_term		(LD->exception.term)
 #define exception_bin		(LD->exception.bin)
